[package]
name        = "objecthash"
version     = "0.2.0"
description = "A content hashing algorithm which works across multiple encodings (JSON, Protobufs, etc)"
homepage    = "https://github.com/cryptosphere/rust-objecthash"
repository  = "https://github.com/cryptosphere/rust-objecthash"
readme      = "README.md"
keywords    = ["hashing", "authenticity", "Merkle", "blockchain"]
license     = "Apache-2.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]

[dependencies.unicode-normalization]
version = ">= 0.1.2"

[dependencies.ring]
optional = true
version = ">= 0.2"

[dev-dependencies.rustc-serialize]
version = ">= 0.3.19"

[features]
default = ["objecthash-ring"]
objecthash-ring = ["ring"]
octet-strings = []
